# Simple-Moving-Average

./: CMakeLists.txt  README.md  SpeedTest.xlsx
lib/: simplemovingaverage.cpp  simplemovingaverage.h
src/: main.cpp
